--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "apollo-boost": "^0.4.9",
+    "apollo-upload-client": "^14.1.3",
+    "axios": "^0.21.1",
     "graphql": "^15.4.0",
     "graphql-request": "^3.4.0",
     "graphql-tag": "^2.11.0",
@@ -17,6 +19,7 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "save": "^2.4.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
